fix: EnchantmentInfoRegistry thread safety, DISCONNECT cleanup, and null guards (#45)
- Implement atomic reference-swapping pattern in EnchantmentInfoRegistry for thread-safe rebuilds.
- Register ClientPlayConnectionEvents.DISCONNECT to clear EnchantmentInfoRegistry on server disconnect.
- Snapshot map in EnchantingStatRegistry.blockEntries() to prevent torn reads during reload.
- Add null guards for minecraft.level in EnchantingInfoScreen and MeridianEnchantmentScreen to prevent NPEs.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>
Co-authored-by: rfizzle <2577744+rfizzle@users.noreply.github.com>